# server/docs/swagger.yaml
@@ -392,24 +392,6 @@ paths:
           schema:
             $ref: '#/definitions/responses.Response'
       summary: Get all Attempts
-  /tutorials/code/attempt/{qnid}:
-    put:
-      description: Edit attempt's data in Db.
-      parameters:
-      - description: attempt
-        in: body
-        name: Attempt
-        required: true
-        schema:
-          $ref: '#/definitions/requests.UpdateAttemptRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/responses.Response'
-      summary: Edit Attempt
   /tutorials/code/attempt/{qnid}/{language}/{username}:
     get:
       description: get Attempt from Db filtered by username and qnid
@@ -437,6 +419,38 @@ paths:
           schema:
             $ref: '#/definitions/responses.Response'
       summary: Get Attempt
+    put:
+      description: Edit attempt's data in Db.
+      parameters:
+      - description: qnid
+        in: path
+        name: qnid
+        required: true
+        type: string
+      - description: language
+        in: path
+        name: language
+        required: true
+        type: integer
+      - description: username
+        in: path
+        name: username
+        required: true
+        type: string
+      - description: attempt
+        in: body
+        name: Attempt
+        required: true
+        schema:
+          $ref: '#/definitions/requests.UpdateAttemptRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.Response'
+      summary: Edit Attempt
   /tutorials/code/attempt/create:
     post:
       description: Creating Attempt
